// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component pagination should call onPageChange prop on click on any page 1`] = `
.c7 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  text-transform: uppercase;
  display: inline-block;
}

.c12 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c18 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c29 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: center;
  display: inline-block;
}

.c32 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 600;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: center;
}

.c33 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c9 {
  overflow: visible;
  font-size: 2rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c9 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c27 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c27 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c31 {
  position: relative;
  display: inline-flex;
}

.c15 {
  display: block;
  min-width: fit-content;
}

.c0 {
  position: absolute;
  left: -1000px;
  opacity: 0;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c1 {
  overflow: auto;
  display: block;
  border: 1px solid #C7D0D8;
  padding: 0;
  border-radius: 0.8rem;
  border-collapse: separate;
  border-spacing: 0;
  margin: 0;
  outline: none;
}

.c1 *:not(svg) {
  box-sizing: border-box;
}

.c1::-webkit-scrollbar-thumb {
  border-radius: 1rem;
  background-color: #b0bcc8;
}

.c1::-webkit-scrollbar-corner {
  background: transparent;
}

.c1::-webkit-scrollbar {
  height: 0.5rem;
  width: 0.5rem;
}

.c1::-webkit-scrollbar-track:horizontal {
  background-color: transparent;
  border-top: 0.1rem solid #C7D0D8;
}

.c1::-webkit-scrollbar-track:vertical {
  background-color: transparent;
  border-left: 0.1rem solid #C7D0D8;
}

.c11 {
  display: grid;
  position: relative;
  opacity: 1;
  width: 100%;
  height: 100%;
  padding: 0;
}

.c11::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: calc(100% - 3.2rem);
  width: 1px;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
}

.c19 {
  display: grid;
  position: relative;
  opacity: 1;
  width: 100%;
  height: 100%;
  padding: 0;
}

.c13 {
  position: relative;
  text-align: center;
  padding: 0.9rem 1.6rem 1rem;
  grid-column: -1/1;
  text-overflow: initial;
  overflow: auto;
  white-space: normal;
  color: #435465;
}

.c13::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: 1px;
  width: calc(100% - 3.2rem);
  left: 50%;
  bottom: 0;
  transform: translateX(-50%);
}

.c17 {
  width: 100%;
  height: 100%;
  display: flex;
  overflow: hidden;
  align-items: center;
  opacity: 1;
  padding: 1.2rem 1.6rem;
  justify-content: flex-start;
}

.c17 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c20 {
  width: 100%;
  height: 100%;
  display: flex;
  overflow: hidden;
  align-items: center;
  opacity: 1;
  padding: 1.2rem 1.6rem;
  justify-content: flex-end;
}

.c20 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c16 {
  display: grid;
  position: relative;
  align-items: center;
  min-width: fit-content;
  outline: none;
  cursor: inherit;
}

.c16.c16:hover {
  z-index: 2;
}

.c16:nth-child(odd),
.c16:nth-child(odd)>* {
  background-color: #F7F8F9;
  color: #13181D;
}

.c16:nth-child(even),
.c16:nth-child(even)>* {
  background-color: #ffffff;
  color: #13181D;
}

.c16:not(:last-child) {
  border-bottom: 0.1rem solid #C7D0D8;
}

.c23 {
  padding: 0;
  margin: 0;
  display: flex;
  list-style: none;
  flex-direction: row;
}

.c23 li {
  margin: 0 0.4rem;
}

.c23 li:last-child {
  margin-right: 0.8rem;
}

.c23 li:first-child {
  margin-left: 0.8rem;
}

.c24>li {
  margin: 0;
}

.c25 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
}

.c25:hover {
  cursor: pointer;
}

.c25:focus {
  outline: none;
}

.c25:disabled {
  cursor: not-allowed;
}

.c28 {
  color: #3872D2;
  background: #EBF1FA;
  border-radius: 50%;
}

.c28:active {
  font-weight: 700;
  color: #13181D;
  background: #eff2f4;
}

.c28 .c6 {
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 700;
}

.c30 {
  color: #435465;
  background: #ffffff;
  border-radius: 50%;
}

.c30:hover {
  color: #303C48;
  background: #F7F8F9;
}

.c30:active {
  font-weight: 700;
  color: #13181D;
  background: #eff2f4;
}

.c30 .c6 {
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 600;
}

.c26 {
  background: #ffffff;
}

.c26>.c8,
.c26 .c8 {
  padding: 0.4rem;
}

.c26 .c8 * {
  fill: #435465;
}

.c26:disabled {
  background: #ffffff;
}

.c26:disabled .c8 * {
  fill: #C7D0D8;
}

.c26:not(:disabled):hover {
  background: #F7F8F9;
}

.c26:not(:disabled):hover .c8 * {
  fill: #303C48;
}

.c26:not(:disabled):active {
  background: #eff2f4;
}

.c26:not(:disabled):active .c8 * {
  fill: #13181D;
}

.c21 {
  display: flex;
  align-items: center;
  position: sticky;
  left: 0;
  bottom: 0;
  z-index: 3;
  background-color: #ffffff;
  min-height: 4.8rem;
  border-top: 0.1rem solid #C7D0D8;
}

.c22 {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: row;
  padding: 0 1.6rem 0 0.8rem;
}

.c22 td {
  padding: 0;
}

.c22 td>.c6 {
  font-size: 1.2rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
}

.c2 {
  display: block;
  position: sticky;
  top: 0;
  z-index: 3;
  min-width: fit-content;
}

.c4 {
  width: 100%;
  height: 100%;
  display: flex;
  overflow: hidden;
  align-items: flex-end;
  justify-content: flex-start;
  opacity: 1;
  position: relative;
  padding: 0.8rem;
}

.c4 .c6 {
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c4:not(:last-child)::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: calc(100% - 3.2rem);
  width: 1px;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
}

.c10 {
  margin: 0;
  padding: 0;
  width: 0.3rem;
  height: 100%;
  top: 0;
  right: 0;
  cursor: ew-resize;
  position: absolute;
}

.c5 {
  border: 0;
  display: flex;
  width: 100%;
  align-items: center;
  min-height: 2rem;
  justify-content: flex-start;
  padding: 0.9rem 0.8rem;
  outline: unset;
  font-family: inherit;
  border-radius: 0.8rem;
  cursor: pointer;
  background-color: #ffffff;
  color: #435465;
}

.c5 .c8 * {
  fill: #435465;
}

.c5.c5.c5 {
  box-sizing: content-box;
}

.c5:hover {
  background-color: #F7F8F9;
  color: #303C48;
}

.c5:hover .c8 * {
  fill: #303C48;
}

.c5:active {
  background-color: #eff2f4;
  color: #13181D;
}

.c5:active .c8 * {
  fill: #13181D;
}

.c5 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
  line-height: 1;
}

.c5 .c8 {
  margin-left: 0.4rem;
  flex-shrink: 0;
}

.c14 {
  border: 0;
  display: flex;
  width: 100%;
  align-items: center;
  min-height: 2rem;
  justify-content: flex-end;
  padding: 0.9rem 0.8rem;
  outline: unset;
  font-family: inherit;
  border-radius: 0.8rem;
  cursor: pointer;
  background-color: #ffffff;
  color: #435465;
}

.c14 .c8 * {
  fill: #435465;
}

.c14.c14.c14 {
  box-sizing: content-box;
}

.c14:hover {
  background-color: #F7F8F9;
  color: #303C48;
}

.c14:hover .c8 * {
  fill: #303C48;
}

.c14:active {
  background-color: #eff2f4;
  color: #13181D;
}

.c14:active .c8 * {
  fill: #13181D;
}

.c14 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
  line-height: 1;
}

.c14 .c8 {
  margin-left: 0.4rem;
  flex-shrink: 0;
}

.c3 {
  display: grid;
  align-items: end;
  user-select: none;
}

.c3>* {
  background-color: #ffffff;
  border-bottom: 1px solid #C7D0D8;
}

<div>
  <div
    class="c0"
  >
    4
  </div>
  <table
    actions=""
    class="c1"
    columns="[object Object],[object Object],[object Object],[object Object],[object Object]"
    defaultactivepage="1"
    defaultsortorder="desc"
    itemsperpage="10"
    rowclickdisablekey=""
    tabindex="-1"
    totalitems="300"
  >
    <thead
      class="c2"
    >
      <tr
        class="c3"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <th
          class="c4"
          tablesize="M"
        >
          <button
            class="c5"
            tablesize="M"
          >
            <span
              class="c6 c7"
              textalign="initial"
              textcolor="inherit"
            >
              Name
            </span>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
        <th
          class="c11"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
          tablesize="M"
        >
          <h5
            class="c6 c12 c13"
            textalign="initial"
            textcolor="inherit"
            textvariant="h5"
            textweight="Strong"
          >
            Marks
          </h5>
          <div
            class="c4"
            tablesize="M"
          >
            <button
              align="right"
              class="c14"
              tablesize="M"
            >
              <span
                class="c6 c7"
                textalign="initial"
                textcolor="inherit"
              >
                Maths
              </span>
              <svg
                class="c8 c9"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                  fill="#435465"
                />
              </svg>
            </button>
            <span
              class="c10"
            />
          </div>
          <div
            class="c4"
            tablesize="M"
          >
            <button
              align="right"
              class="c14"
              tablesize="M"
            >
              <span
                class="c6 c7"
                textalign="initial"
                textcolor="inherit"
              >
                Science
              </span>
              <svg
                class="c8 c9"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                  fill="#435465"
                />
              </svg>
            </button>
            <span
              class="c10"
            />
          </div>
        </th>
        <th
          class="c4"
          tablesize="M"
        >
          <button
            align="right"
            class="c14"
            tablesize="M"
          >
            <span
              class="c6 c7"
              textalign="initial"
              textcolor="inherit"
            >
              Age
            </span>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
        <th
          class="c4"
          tablesize="M"
        >
          <button
            class="c5"
            tablesize="M"
          >
            <span
              class="c6 c7"
              textalign="initial"
              textcolor="inherit"
            >
              Passed
            </span>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
        <th
          class="c4"
          tablesize="M"
        >
          <button
            align="right"
            class="c14"
            tablesize="M"
          >
            <span
              class="c6 c7"
              textalign="initial"
              textcolor="inherit"
            >
              Rating
            </span>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
      </tr>
    </thead>
    <tbody
      class="c15"
    >
      <tr
        class="c16"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
        tabindex="1"
      >
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Albus Percival Wulfric Brian Dumbledore"
          >
            Albus Percival Wulfric Brian Dumbledore
          </span>
        </td>
        <td
          class="c19"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="6"
            >
              6
            </span>
          </div>
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="4"
            >
              4
            </span>
          </div>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="12"
          >
            12
          </span>
        </td>
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="5"
          >
            5
          </span>
        </td>
      </tr>
      <tr
        class="c16"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
        tabindex="2"
      >
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Mary May"
          >
            Mary May
          </span>
        </td>
        <td
          class="c19"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="4"
            >
              4
            </span>
          </div>
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="7"
            >
              7
            </span>
          </div>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="1"
          >
            1
          </span>
        </td>
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c16"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
        tabindex="3"
      >
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Christine Lobowski"
          >
            Christine Lobowski
          </span>
        </td>
        <td
          class="c19"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="4"
            >
              4
            </span>
          </div>
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="7"
            >
              7
            </span>
          </div>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="42"
          >
            42
          </span>
        </td>
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c16"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
        tabindex="4"
      >
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Brendon Philips"
          >
            Brendon Philips
          </span>
        </td>
        <td
          class="c19"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="10"
            >
              10
            </span>
          </div>
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="2"
            >
              2
            </span>
          </div>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="125"
          >
            125
          </span>
        </td>
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="4.5"
          >
            4.5
          </span>
        </td>
      </tr>
      <tr
        class="c16"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
        tabindex="5"
      >
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Margret Marmajuke"
          >
            Margret Marmajuke
          </span>
        </td>
        <td
          class="c19"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="7"
            >
              7
            </span>
          </div>
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="5"
            >
              5
            </span>
          </div>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="16"
          >
            16
          </span>
        </td>
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c16"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
        tabindex="6"
      >
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Van Ng"
          >
            Van Ng
          </span>
        </td>
        <td
          class="c19"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="9"
            >
              9
            </span>
          </div>
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="2"
            >
              2
            </span>
          </div>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="37"
          >
            37
          </span>
        </td>
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="No"
          >
            No
          </span>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c16"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
        tabindex="7"
      >
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Duc Ng"
          >
            Duc Ng
          </span>
        </td>
        <td
          class="c19"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="10"
            >
              10
            </span>
          </div>
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="3"
            >
              3
            </span>
          </div>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="37"
          >
            37
          </span>
        </td>
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="No"
          >
            No
          </span>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c21"
      tablesize="M"
    >
      <tr
        class="c22"
      >
        <td>
          <ul
            class="c23 c24 "
            data-testid="foot-pagination"
            tablesize="M"
            variant="horizontal"
          >
            <li>
              <button
                class="c25 c26"
                disabled=""
                type="button"
              >
                <svg
                  class="c8 c27"
                  fill="none"
                  height="1em"
                  title="prev"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 6.705a.996.996 0 0 0-1.41 0L9 11.295a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41l-3.88-3.89L15 8.115c.39-.39.38-1.03 0-1.41z"
                    fill="#000"
                    fill-opacity=".54"
                  />
                </svg>
              </button>
            </li>
            <li>
              <button
                class="c25 c28"
                type="button"
              >
                <span
                  class="c6 c29"
                  textalign="center"
                  textcolor="inherit"
                >
                  1
                </span>
              </button>
            </li>
            <li>
              <button
                class="c25 c30"
                type="button"
              >
                <span
                  class="c6 c29"
                  textalign="center"
                  textcolor="inherit"
                >
                  2
                </span>
              </button>
            </li>
            <li>
              <button
                class="c25 c30"
                type="button"
              >
                <span
                  class="c6 c29"
                  textalign="center"
                  textcolor="inherit"
                >
                  3
                </span>
              </button>
            </li>
            <li>
              <div
                class="c31"
                id="medly-popover-wrapper"
              >
                <button
                  class="c25 c30"
                  type="button"
                >
                  <h5
                    class="c6 c32"
                    textalign="center"
                    textcolor="inherit"
                    textvariant="h5"
                    textweight="Medium"
                  >
                    ...
                  </h5>
                </button>
              </div>
            </li>
            <li>
              <button
                class="c25 c30"
                type="button"
              >
                <span
                  class="c6 c29"
                  textalign="center"
                  textcolor="inherit"
                >
                  30
                </span>
              </button>
            </li>
            <li>
              <button
                class="c25 c26"
                type="button"
              >
                <svg
                  class="c8 c27"
                  fill="none"
                  height="1em"
                  title="next"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9 6.71a.996.996 0 0 0 0 1.41L12.88 12 9 15.88a.996.996 0 1 0 1.41 1.41L15 12.7a.996.996 0 0 0 0-1.41L10.41 6.7c-.38-.38-1.02-.38-1.41.01z"
                    fill="#000"
                    fill-opacity=".54"
                  />
                </svg>
              </button>
            </li>
          </ul>
        </td>
        <td>
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
          >
            Viewing
          </span>
          <strong
            class="c6 c33"
            textalign="initial"
            textcolor="inherit"
            textweight="Strong"
          >
             1 - 10 
          </strong>
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
          >
            of
          </span>
          <strong
            class="c6 c33"
            textalign="initial"
            textcolor="inherit"
            textweight="Strong"
          >
             300 
          </strong>
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
          >
            Results
          </span>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component should render HiddenDiv containing HTML tags as plain text 1`] = `
.c7 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  text-transform: uppercase;
  display: inline-block;
}

.c12 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c18 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c9 {
  overflow: visible;
  font-size: 2rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c9 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c15 {
  display: block;
  min-width: fit-content;
}

.c0 {
  position: absolute;
  left: -1000px;
  opacity: 0;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c1 {
  overflow: auto;
  display: block;
  border: 1px solid #C7D0D8;
  padding: 0;
  border-radius: 0.8rem;
  border-collapse: separate;
  border-spacing: 0;
  margin: 0;
  outline: none;
}

.c1 *:not(svg) {
  box-sizing: border-box;
}

.c1::-webkit-scrollbar-thumb {
  border-radius: 1rem;
  background-color: #b0bcc8;
}

.c1::-webkit-scrollbar-corner {
  background: transparent;
}

.c1::-webkit-scrollbar {
  height: 0.5rem;
  width: 0.5rem;
}

.c1::-webkit-scrollbar-track:horizontal {
  background-color: transparent;
  border-top: 0.1rem solid #C7D0D8;
}

.c1::-webkit-scrollbar-track:vertical {
  background-color: transparent;
  border-left: 0.1rem solid #C7D0D8;
}

.c11 {
  display: grid;
  position: relative;
  opacity: 1;
  width: 100%;
  height: 100%;
  padding: 0;
}

.c11::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: calc(100% - 3.2rem);
  width: 1px;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
}

.c19 {
  display: grid;
  position: relative;
  opacity: 1;
  width: 100%;
  height: 100%;
  padding: 0;
}

.c13 {
  position: relative;
  text-align: center;
  padding: 0.9rem 1.6rem 1rem;
  grid-column: -1/1;
  text-overflow: initial;
  overflow: auto;
  white-space: normal;
  color: #435465;
}

.c13::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: 1px;
  width: calc(100% - 3.2rem);
  left: 50%;
  bottom: 0;
  transform: translateX(-50%);
}

.c17 {
  width: 100%;
  height: 100%;
  display: flex;
  overflow: hidden;
  align-items: center;
  opacity: 1;
  padding: 1.2rem 1.6rem;
  justify-content: flex-start;
}

.c17 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c20 {
  width: 100%;
  height: 100%;
  display: flex;
  overflow: hidden;
  align-items: center;
  opacity: 1;
  padding: 1.2rem 1.6rem;
  justify-content: flex-end;
}

.c20 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c16 {
  display: grid;
  position: relative;
  align-items: center;
  min-width: fit-content;
  outline: none;
  cursor: inherit;
}

.c16.c16:hover {
  z-index: 2;
}

.c16:nth-child(odd),
.c16:nth-child(odd)>* {
  background-color: #F7F8F9;
  color: #13181D;
}

.c16:nth-child(even),
.c16:nth-child(even)>* {
  background-color: #ffffff;
  color: #13181D;
}

.c16:not(:last-child) {
  border-bottom: 0.1rem solid #C7D0D8;
}

.c2 {
  display: block;
  position: sticky;
  top: 0;
  z-index: 3;
  min-width: fit-content;
}

.c4 {
  width: 100%;
  height: 100%;
  display: flex;
  overflow: hidden;
  align-items: flex-end;
  justify-content: flex-start;
  opacity: 1;
  position: relative;
  padding: 0.8rem;
}

.c4 .c6 {
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c4:not(:last-child)::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: calc(100% - 3.2rem);
  width: 1px;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
}

.c10 {
  margin: 0;
  padding: 0;
  width: 0.3rem;
  height: 100%;
  top: 0;
  right: 0;
  cursor: ew-resize;
  position: absolute;
}

.c5 {
  border: 0;
  display: flex;
  width: 100%;
  align-items: center;
  min-height: 2rem;
  justify-content: flex-start;
  padding: 0.9rem 0.8rem;
  outline: unset;
  font-family: inherit;
  border-radius: 0.8rem;
  cursor: pointer;
  background-color: #ffffff;
  color: #435465;
}

.c5 .c8 * {
  fill: #435465;
}

.c5.c5.c5 {
  box-sizing: content-box;
}

.c5:hover {
  background-color: #F7F8F9;
  color: #303C48;
}

.c5:hover .c8 * {
  fill: #303C48;
}

.c5:active {
  background-color: #eff2f4;
  color: #13181D;
}

.c5:active .c8 * {
  fill: #13181D;
}

.c5 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
  line-height: 1;
}

.c5 .c8 {
  margin-left: 0.4rem;
  flex-shrink: 0;
}

.c14 {
  border: 0;
  display: flex;
  width: 100%;
  align-items: center;
  min-height: 2rem;
  justify-content: flex-end;
  padding: 0.9rem 0.8rem;
  outline: unset;
  font-family: inherit;
  border-radius: 0.8rem;
  cursor: pointer;
  background-color: #ffffff;
  color: #435465;
}

.c14 .c8 * {
  fill: #435465;
}

.c14.c14.c14 {
  box-sizing: content-box;
}

.c14:hover {
  background-color: #F7F8F9;
  color: #303C48;
}

.c14:hover .c8 * {
  fill: #303C48;
}

.c14:active {
  background-color: #eff2f4;
  color: #13181D;
}

.c14:active .c8 * {
  fill: #13181D;
}

.c14 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
  line-height: 1;
}

.c14 .c8 {
  margin-left: 0.4rem;
  flex-shrink: 0;
}

.c3 {
  display: grid;
  align-items: end;
  user-select: none;
}

.c3>* {
  background-color: #ffffff;
  border-bottom: 1px solid #C7D0D8;
}

<div>
  <div
    class="c0"
  >
    &lt;img src=x onerror=confirm\`1\`&gt;
  </div>
  <table
    actions=""
    class="c1"
    columns="[object Object],[object Object],[object Object],[object Object],[object Object]"
    defaultactivepage="1"
    defaultsortorder="desc"
    itemsperpage="20"
    rowclickdisablekey=""
    tabindex="-1"
    totalitems="0"
  >
    <thead
      class="c2"
    >
      <tr
        class="c3"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <th
          class="c4"
          tablesize="M"
        >
          <button
            class="c5"
            tablesize="M"
          >
            <span
              class="c6 c7"
              textalign="initial"
              textcolor="inherit"
            >
              Name
            </span>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
        <th
          class="c11"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
          tablesize="M"
        >
          <h5
            class="c6 c12 c13"
            textalign="initial"
            textcolor="inherit"
            textvariant="h5"
            textweight="Strong"
          >
            Marks
          </h5>
          <div
            class="c4"
            tablesize="M"
          >
            <button
              align="right"
              class="c14"
              tablesize="M"
            >
              <span
                class="c6 c7"
                textalign="initial"
                textcolor="inherit"
              >
                Maths
              </span>
              <svg
                class="c8 c9"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                  fill="#435465"
                />
              </svg>
            </button>
            <span
              class="c10"
            />
          </div>
          <div
            class="c4"
            tablesize="M"
          >
            <button
              align="right"
              class="c14"
              tablesize="M"
            >
              <span
                class="c6 c7"
                textalign="initial"
                textcolor="inherit"
              >
                Science
              </span>
              <svg
                class="c8 c9"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                  fill="#435465"
                />
              </svg>
            </button>
            <span
              class="c10"
            />
          </div>
        </th>
        <th
          class="c4"
          tablesize="M"
        >
          <button
            align="right"
            class="c14"
            tablesize="M"
          >
            <span
              class="c6 c7"
              textalign="initial"
              textcolor="inherit"
            >
              Age
            </span>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
        <th
          class="c4"
          tablesize="M"
        >
          <button
            class="c5"
            tablesize="M"
          >
            <span
              class="c6 c7"
              textalign="initial"
              textcolor="inherit"
            >
              Passed
            </span>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
        <th
          class="c4"
          tablesize="M"
        >
          <button
            align="right"
            class="c14"
            tablesize="M"
          >
            <span
              class="c6 c7"
              textalign="initial"
              textcolor="inherit"
            >
              Rating
            </span>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
      </tr>
    </thead>
    <tbody
      class="c15"
    >
      <tr
        class="c16"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
        tabindex="8"
      >
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Albus Dumbledore"
          >
            Albus Dumbledore
          </span>
        </td>
        <td
          class="c19"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="6"
            >
              6
            </span>
          </div>
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="4"
            >
              4
            </span>
          </div>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="12"
          >
            12
          </span>
        </td>
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="<img src=x onerror=confirm\`1\`>"
          >
            &lt;img src=x onerror=confirm\`1\`&gt;
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table component should render properly 1`] = `
.c7 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  text-transform: uppercase;
  display: inline-block;
}

.c12 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c18 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c9 {
  overflow: visible;
  font-size: 2rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c9 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c15 {
  display: block;
  min-width: fit-content;
}

.c0 {
  position: absolute;
  left: -1000px;
  opacity: 0;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c1 {
  overflow: auto;
  display: block;
  border: 1px solid #C7D0D8;
  padding: 0;
  border-radius: 0.8rem;
  border-collapse: separate;
  border-spacing: 0;
  margin: 0;
  outline: none;
}

.c1 *:not(svg) {
  box-sizing: border-box;
}

.c1::-webkit-scrollbar-thumb {
  border-radius: 1rem;
  background-color: #b0bcc8;
}

.c1::-webkit-scrollbar-corner {
  background: transparent;
}

.c1::-webkit-scrollbar {
  height: 0.5rem;
  width: 0.5rem;
}

.c1::-webkit-scrollbar-track:horizontal {
  background-color: transparent;
  border-top: 0.1rem solid #C7D0D8;
}

.c1::-webkit-scrollbar-track:vertical {
  background-color: transparent;
  border-left: 0.1rem solid #C7D0D8;
}

.c11 {
  display: grid;
  position: relative;
  opacity: 1;
  width: 100%;
  height: 100%;
  padding: 0;
}

.c11::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: calc(100% - 3.2rem);
  width: 1px;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
}

.c19 {
  display: grid;
  position: relative;
  opacity: 1;
  width: 100%;
  height: 100%;
  padding: 0;
}

.c13 {
  position: relative;
  text-align: center;
  padding: 0.9rem 1.6rem 1rem;
  grid-column: -1/1;
  text-overflow: initial;
  overflow: auto;
  white-space: normal;
  color: #435465;
}

.c13::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: 1px;
  width: calc(100% - 3.2rem);
  left: 50%;
  bottom: 0;
  transform: translateX(-50%);
}

.c17 {
  width: 100%;
  height: 100%;
  display: flex;
  overflow: hidden;
  align-items: center;
  opacity: 1;
  padding: 1.2rem 1.6rem;
  justify-content: flex-start;
}

.c17 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c20 {
  width: 100%;
  height: 100%;
  display: flex;
  overflow: hidden;
  align-items: center;
  opacity: 1;
  padding: 1.2rem 1.6rem;
  justify-content: flex-end;
}

.c20 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c16 {
  display: grid;
  position: relative;
  align-items: center;
  min-width: fit-content;
  outline: none;
  cursor: inherit;
}

.c16.c16:hover {
  z-index: 2;
}

.c16:nth-child(odd),
.c16:nth-child(odd)>* {
  background-color: #F7F8F9;
  color: #13181D;
}

.c16:nth-child(even),
.c16:nth-child(even)>* {
  background-color: #ffffff;
  color: #13181D;
}

.c16:not(:last-child) {
  border-bottom: 0.1rem solid #C7D0D8;
}

.c2 {
  display: block;
  position: sticky;
  top: 0;
  z-index: 3;
  min-width: fit-content;
}

.c4 {
  width: 100%;
  height: 100%;
  display: flex;
  overflow: hidden;
  align-items: flex-end;
  justify-content: flex-start;
  opacity: 1;
  position: relative;
  padding: 0.8rem;
}

.c4 .c6 {
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c4:not(:last-child)::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: calc(100% - 3.2rem);
  width: 1px;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
}

.c10 {
  margin: 0;
  padding: 0;
  width: 0.3rem;
  height: 100%;
  top: 0;
  right: 0;
  cursor: ew-resize;
  position: absolute;
}

.c5 {
  border: 0;
  display: flex;
  width: 100%;
  align-items: center;
  min-height: 2rem;
  justify-content: flex-start;
  padding: 0.9rem 0.8rem;
  outline: unset;
  font-family: inherit;
  border-radius: 0.8rem;
  cursor: pointer;
  background-color: #ffffff;
  color: #435465;
}

.c5 .c8 * {
  fill: #435465;
}

.c5.c5.c5 {
  box-sizing: content-box;
}

.c5:hover {
  background-color: #F7F8F9;
  color: #303C48;
}

.c5:hover .c8 * {
  fill: #303C48;
}

.c5:active {
  background-color: #eff2f4;
  color: #13181D;
}

.c5:active .c8 * {
  fill: #13181D;
}

.c5 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
  line-height: 1;
}

.c5 .c8 {
  margin-left: 0.4rem;
  flex-shrink: 0;
}

.c14 {
  border: 0;
  display: flex;
  width: 100%;
  align-items: center;
  min-height: 2rem;
  justify-content: flex-end;
  padding: 0.9rem 0.8rem;
  outline: unset;
  font-family: inherit;
  border-radius: 0.8rem;
  cursor: pointer;
  background-color: #ffffff;
  color: #435465;
}

.c14 .c8 * {
  fill: #435465;
}

.c14.c14.c14 {
  box-sizing: content-box;
}

.c14:hover {
  background-color: #F7F8F9;
  color: #303C48;
}

.c14:hover .c8 * {
  fill: #303C48;
}

.c14:active {
  background-color: #eff2f4;
  color: #13181D;
}

.c14:active .c8 * {
  fill: #13181D;
}

.c14 .c6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
  line-height: 1;
}

.c14 .c8 {
  margin-left: 0.4rem;
  flex-shrink: 0;
}

.c3 {
  display: grid;
  align-items: end;
  user-select: none;
}

.c3>* {
  background-color: #ffffff;
  border-bottom: 1px solid #C7D0D8;
}

<div>
  <div
    class="c0"
  >
    4
  </div>
  <table
    actions=""
    class="c1"
    columns="[object Object],[object Object],[object Object],[object Object],[object Object]"
    defaultactivepage="1"
    defaultsortorder="desc"
    itemsperpage="20"
    rowclickdisablekey=""
    tabindex="-1"
    totalitems="0"
  >
    <thead
      class="c2"
    >
      <tr
        class="c3"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <th
          class="c4"
          tablesize="M"
        >
          <button
            class="c5"
            tablesize="M"
          >
            <span
              class="c6 c7"
              textalign="initial"
              textcolor="inherit"
            >
              Name
            </span>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
        <th
          class="c11"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
          tablesize="M"
        >
          <h5
            class="c6 c12 c13"
            textalign="initial"
            textcolor="inherit"
            textvariant="h5"
            textweight="Strong"
          >
            Marks
          </h5>
          <div
            class="c4"
            tablesize="M"
          >
            <button
              align="right"
              class="c14"
              tablesize="M"
            >
              <span
                class="c6 c7"
                textalign="initial"
                textcolor="inherit"
              >
                Maths
              </span>
              <svg
                class="c8 c9"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                  fill="#435465"
                />
              </svg>
            </button>
            <span
              class="c10"
            />
          </div>
          <div
            class="c4"
            tablesize="M"
          >
            <button
              align="right"
              class="c14"
              tablesize="M"
            >
              <span
                class="c6 c7"
                textalign="initial"
                textcolor="inherit"
              >
                Science
              </span>
              <svg
                class="c8 c9"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                  fill="#435465"
                />
              </svg>
            </button>
            <span
              class="c10"
            />
          </div>
        </th>
        <th
          class="c4"
          tablesize="M"
        >
          <button
            align="right"
            class="c14"
            tablesize="M"
          >
            <span
              class="c6 c7"
              textalign="initial"
              textcolor="inherit"
            >
              Age
            </span>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
        <th
          class="c4"
          tablesize="M"
        >
          <button
            class="c5"
            tablesize="M"
          >
            <span
              class="c6 c7"
              textalign="initial"
              textcolor="inherit"
            >
              Passed
            </span>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
        <th
          class="c4"
          tablesize="M"
        >
          <button
            align="right"
            class="c14"
            tablesize="M"
          >
            <span
              class="c6 c7"
              textalign="initial"
              textcolor="inherit"
            >
              Rating
            </span>
            <svg
              class="c8 c9"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c10"
          />
        </th>
      </tr>
    </thead>
    <tbody
      class="c15"
    >
      <tr
        class="c16"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
        tabindex="1"
      >
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Albus Percival Wulfric Brian Dumbledore"
          >
            Albus Percival Wulfric Brian Dumbledore
          </span>
        </td>
        <td
          class="c19"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="6"
            >
              6
            </span>
          </div>
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="4"
            >
              4
            </span>
          </div>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="12"
          >
            12
          </span>
        </td>
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="5"
          >
            5
          </span>
        </td>
      </tr>
      <tr
        class="c16"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
        tabindex="2"
      >
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Mary May"
          >
            Mary May
          </span>
        </td>
        <td
          class="c19"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="4"
            >
              4
            </span>
          </div>
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="7"
            >
              7
            </span>
          </div>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="1"
          >
            1
          </span>
        </td>
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c16"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
        tabindex="3"
      >
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Christine Lobowski"
          >
            Christine Lobowski
          </span>
        </td>
        <td
          class="c19"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="4"
            >
              4
            </span>
          </div>
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="7"
            >
              7
            </span>
          </div>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="42"
          >
            42
          </span>
        </td>
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c16"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
        tabindex="4"
      >
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Brendon Philips"
          >
            Brendon Philips
          </span>
        </td>
        <td
          class="c19"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="10"
            >
              10
            </span>
          </div>
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="2"
            >
              2
            </span>
          </div>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="125"
          >
            125
          </span>
        </td>
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="4.5"
          >
            4.5
          </span>
        </td>
      </tr>
      <tr
        class="c16"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
        tabindex="5"
      >
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Margret Marmajuke"
          >
            Margret Marmajuke
          </span>
        </td>
        <td
          class="c19"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="7"
            >
              7
            </span>
          </div>
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="5"
            >
              5
            </span>
          </div>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="16"
          >
            16
          </span>
        </td>
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c16"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
        tabindex="6"
      >
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Van Ng"
          >
            Van Ng
          </span>
        </td>
        <td
          class="c19"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="9"
            >
              9
            </span>
          </div>
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="2"
            >
              2
            </span>
          </div>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="37"
          >
            37
          </span>
        </td>
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="No"
          >
            No
          </span>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c16"
        gridtemplatecolumns=" minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr)"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
        tabindex="7"
      >
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="Duc Ng"
          >
            Duc Ng
          </span>
        </td>
        <td
          class="c19"
          gridtemplatecolumns=" minmax(100px, 1fr) minmax(100px, 1fr)"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="10"
            >
              10
            </span>
          </div>
          <div
            align="right"
            class="c20"
            tablesize="M"
          >
            <span
              class="c6 c18"
              textalign="initial"
              textcolor="inherit"
              textvariant="body2"
              title="3"
            >
              3
            </span>
          </div>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="37"
          >
            37
          </span>
        </td>
        <td
          class="c17"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="No"
          >
            No
          </span>
        </td>
        <td
          align="right"
          class="c20"
          tablesize="M"
        >
          <span
            class="c6 c18"
            textalign="initial"
            textcolor="inherit"
            textvariant="body2"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
